--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -125,7 +125,13 @@
         <p>
           <h5>My Activites</h5><br>
           <p>
-
+            <a href="https://tryhackme.com/jr/nmap01" target="_blank">Nmap Live Host Discovery</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/jr/nmap02" target="_blank">Nmap Basic Port Scans</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/superspamr" target="_blank">Super-Spam</a> : TryHackMe <br><br>
+            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Solstice</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+            Security+ <br><br>  
           </p>
           <br><br>
           <h5>Blog Reads</h5>
