--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -104,7 +104,7 @@
               <a href="https://www.geeksforgeeks.org/python-programming-language/" target="_blank">Python Programming Language</a> : GeeksforGeeks <br><br>
             </p>
           <br><br>
-          <h5>Blog Reads</h5>
+          <h5>Blog Reads</h5><br>
             <p>
               <a href="https://sapt.medium.com/perform-information-gathering-using-following-tools-on-the-given-targets-cyber-sapiens-internship-12c858166008" target="_blank">Perform Information Gathering using Following Tools on the Given Targets-Cyber Sapiens Internship Task-3</a> : Prajit Sindhkar <br><br>
               <a href="https://infosecwriteups.com/idor-leads-to-leak-private-details-866563365490" target="_blank">IDOR leads to leak Private Details</a> : annonymous <br><br>
@@ -134,7 +134,7 @@
             Security+ <br><br>  
           </p>
           <br><br>
-          <h5>Blog Reads</h5>
+          <h5>Blog Reads</h5><br>
             <p>
               <a href="https://sapt.medium.com/some-tools-for-subdomain-enumeration-cyber-sapiens-internship-task-5-2ac09b7691f7" target="_blank">Some Tools for Subdomain Enumeration-Cyber Sapiens Internship Task-5</a> : Prajit Sindhkar <br><br>
               <a href="https://sapt.medium.com/favorite-hackers-and-hacking-groups-cyber-sapiens-internship-task-1-9a4c8b411441" target="_blank">Favorite Hackers and Hacking Groups-Cyber Sapiens Internship Task-1</a> : Prajit Sindhkar <br><br>
