--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -75,7 +75,7 @@
               <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
               <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sar</a> : Offensive Security Proving Grounds (Play) <br><br>
               <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
-            Security+ <br><br>  
+              Security+ <br><br>  
             </p>
           <br><br>
           <h5>Blog Reads</h5><br>
@@ -124,15 +124,15 @@
         <h3>Day 4: Jan 4 2022</h3><br>
         <p>
           <h5>My Activites</h5><br>
-          <p>
-            <a href="https://tryhackme.com/jr/nmap01" target="_blank">Nmap Live Host Discovery</a> : TryHackMe <br><br>
-            <a href="https://tryhackme.com/jr/nmap02" target="_blank">Nmap Basic Port Scans</a> : TryHackMe <br><br>
-            <a href="https://tryhackme.com/room/superspamr" target="_blank">Super-Spam</a> : TryHackMe <br><br>
-            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
-            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Solstice</a> : Offensive Security Proving Grounds (Play) <br><br>
-            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
-            Security+ <br><br>  
-          </p>
+            <p>
+              <a href="https://tryhackme.com/jr/nmap01" target="_blank">Nmap Live Host Discovery</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/jr/nmap02" target="_blank">Nmap Basic Port Scans</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/superspamr" target="_blank">Super-Spam</a> : TryHackMe <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Solstice</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+              Security+ <br><br>  
+            </p>
           <br><br>
           <h5>Blog Reads</h5><br>
             <p>
@@ -144,8 +144,35 @@
               <a href="https://medium.com/@tushar.tilak.sharma/p5-to-p1-intresting-account-takeover-6e59b879494b" target="_blank">P5 to P1: Interesting Account Takeover</a> : Tushar Sharma <br><br>
             </p>
         </p>
-
-
+        <br><br>
+        <h3>Day 5: Jan 5 2022</h3><br>
+        <p>
+          <h5>My Activites</h5>
+            <p>
+              <a href="https://tryhackme.com/jr/nmap03" target="_blank">Nmap Advanced Port Scans</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/containme1" target="_blank">ContainMe</a> : TryHackMe <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sumo</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+              <a href="https://www.udemy.com/course/100-days-of-code/">100 Days of Code: The Complete Python Por Bootcamp for 2022</a> : Udemy <br><br>
+              Security+ <br><br>
+            </p>
+          <br><br>
+          <h5>Blog Reads</h5>
+            <p>
+              <a href="https://kadalonsecurity.medium.com/using-nested-traversal-sequences-to-bypass-file-path-traversal-defense-3982feb4e60b" target="_blank">Using Nested Traversal Sequences to Bypass File Path Traversal Defense</a> : Kadalon Security & Intelligence <br><br>
+              <a href="https://gokul4831.medium.com/crlf-carriage-return-line-feed-injection-e8ad6e2a0628" target="_blank">CRLF (Carriage return Line feed) injection</a> : gokul GV <br><br>
+              <a href="https://medium.com/@citril/cve-2021-3817-from-sqli-to-plaintext-admin-password-recovery-13735773cc75" target="_blank">CVE-2021–3817: From SQLi to plaintext admin password recovery</a> : citril <br><br>
+              <a href="https://infosecwriteups.com/how-i-found-reflected-xss-on-a-webgis-26030bf8f0a9" target="_blank">How I found Reflected XSS on a WebGIS</a> : KhanhCM <br><br>
+              <a href="https://pullakarthik5.medium.com/unauthorized-access-leads-to-pii-data-leakage-bae2bfd5820" target="_blank">UNAUTHORIZED ACCESS LEADS TO PII DATA LEAKAGE</a> : @pullakarthik <br><br>
+              <a href="https://basu-banakar.medium.com/ssrf-internal-resource-accessing-bypassing-filter-ctf-ff129a5faac" target="_blank">SSRF Internal resource accessing & Bypassing Filter (CTF)</a> : Basavaraj Banakar <br><br>
+              <a href="https://sapt.medium.com/automated-scanner-tools-cyber-sapiens-task-6-fd8a745d3621" target="_blank">Automated Scanner Tools-Cyber Sapiens Task-6</a> : Prajit Sindhkar <br><br>
+              <a href="https://medium.com/@thehemdeep/otp-bypass-via-response-manipulation-31a524f968cc" target="_blank">OTP Bypass via response manipulation</a> : Hemdeep Gamit <br><br>
+              <a href="https://caesarevan23.medium.com/ssrf-external-service-interaction-for-find-real-ip-cloudflare-and-leads-to-sql-injection-c22c02243299" target="_blank">SSRF External Service Interaction for Find Real IP CloudFlare and Leads to SQL Injection</a> : Caesar Evan Santoso <br><br>
+              <a href="https://sahandami.medium.com/find-xss-in-wide-scope-with-kxss-91f9573883c4" target="_blank">How to Find XSS in Wide Scope</a> : Sahand <br><br>
+              <a href="https://infosecwriteups.com/external-ssrf-detected-%EF%B8%8F-a36ade59f7fd" target="_blank">External SSRF detected ⚠️</a> : Shreya Talukdar <Br><br>
+            </p>
+        </p>
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
