--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -172,6 +172,32 @@
               <a href="https://sahandami.medium.com/find-xss-in-wide-scope-with-kxss-91f9573883c4" target="_blank">How to Find XSS in Wide Scope</a> : Sahand <br><br>
               <a href="https://infosecwriteups.com/external-ssrf-detected-%EF%B8%8F-a36ade59f7fd" target="_blank">External SSRF detected ⚠️</a> : Shreya Talukdar <Br><br>
             </p>
+            <br><br>
+        </p>
+        <br><br>
+        <h3>Day 6: Jan 6 2022</h3><br>
+        <p>
+          <h5>My Activites</h5>
+            <p>
+              <a href="https://www.udemy.com/course/ethical-hacking-python/" target="_blank">The Complete Python Hacking Course: Beginner to Advanced!</a> : Udemy <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBoxEasyEnum</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/jr/nmap04" target="_blank">Nmap Post Port Scans</a> : TryHackMe <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+              Security+ <br><br>
+              <a href="https://tryhackme.com/room/kothhackers" target="_blank">KoTH Hackers</a> : TryHackMe <br><br>
+            </p>
+          <br><br>
+          <h5>Blog Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/research-on-log4jshell-cve-2021-44228-cyber-sapiens-internship-task-7-ae18072732ec" target="_blank">Research on Log4JShell-CVE-2021–44228-Cyber Sapiens Internship Task-7</a> : Prajit Sindhkar <br><br>
+              <a href="https://medium.com/@shubhayumajumdar/bug-chain-leads-to-mass-account-takeover-25dc76205f5d" target="_blank">Bug Chain leads to Mass Account Takeover!</a> : Shubhayu Majumdar <br><br>
+              <a href="https://infosecwriteups.com/bypassed-and-uploaded-a-sweet-reverse-shell-d15e1bbf5836" target="_blank">Bypassed! and uploaded a sweet reverse shell</a> : Ajay Sharma <br><br>
+              <a href="https://mafiaguy.medium.com/how-to-use-burp-suite-rest-api-5c3ec059a6ad" target="_blank">How to use Burp Suite Rest API?</a> : Siddhanth Dwivedi <br><br>
+              <a href="https://medium.com/@shubhamkumarks1999/cross-site-request-forgery-csrf-403574f8aded" target="_blank">Cross-site request forgery (CSRF)</a> : Shubham kumar` <br><br>
+              <a href="https://tanzilrehman.com/what-is-server-side-template-injection-ssti-and-its-basic-deployment-e205913d548b" target="_blank">What is Server-Side Template Injection (SSTI)? And its basic deployment.</a> : Tanzil Rehman <br><br>
+            </p>
+          <br><br>
         </p>
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
