--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -200,6 +200,31 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 7: Jan 7 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/ethical-hacking-python/" target="_blank">The Complete Python Hacking Course: Beginner to Advanced!</a> : Udemy <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Geisha</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/theblobblog" target="_blank">The Blob Blog</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              Security+ <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/linux-distros-used-by-security-professionals-and-kali-linux-commands-cyber-sapiens-internship-task-e336dbdf5a97" target="_blank">Linux Distros used by Security Professionals and Kali Linux Commands-Cyber Sapiens Internship Task -2</a> : Prajit Sindhkar <br><br>
+              <a href="https://medium.com/@vflexo/my-first-bug-bounty-report-post-based-xss-96c301a0cea6" target="_blank">My First Bug Bounty Report | POST-based XSS</a> : vFlexo <br><br>
+              <a href="https://infosecwriteups.com/accessing-grofers-grafana-instance-using-shodan-52c585ada797" target="_blank">Accessing Grofers Grafana Instance Using Shodan</a> : Lohith Gowda M <br><br>
+              <a href="https://systemweakness.com/the-story-of-how-i-bypass-sso-login-6b93370196cf" target="_blank">The Story Of How I Bypass SSO Login</a> : zer0d <br><br>
+              <a href="https://systemweakness.com/accessing-godaddy-internal-instance-through-an-email-logic-bug-fdbea7b23542" target="_blank">Accessing GoDaddy internal instance through an email logic bug.</a> : Mostafa Mamdoh <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
