--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#week1">Week 1</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week2">Week 2</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -220,6 +223,38 @@
               <a href="https://infosecwriteups.com/accessing-grofers-grafana-instance-using-shodan-52c585ada797" target="_blank">Accessing Grofers Grafana Instance Using Shodan</a> : Lohith Gowda M <br><br>
               <a href="https://systemweakness.com/the-story-of-how-i-bypass-sso-login-6b93370196cf" target="_blank">The Story Of How I Bypass SSO Login</a> : zer0d <br><br>
               <a href="https://systemweakness.com/accessing-godaddy-internal-instance-through-an-email-logic-bug-fdbea7b23542" target="_blank">Accessing GoDaddy internal instance through an email logic bug.</a> : Mostafa Mamdoh <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
+        <h2 id="week2">Week 2</h2> <br><br><br>
+        <br><br>
+        <h3>Day 8: Jan 8 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/ethical-hacking-python/" target="_blank">The Complete Python Hacking Course: Beginner to Advanced!</a> : Udemy <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Gaara</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/theblobblog" target="_blank">Sustah</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              Security+ <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://medium.com/ax1al/introduction-to-game-hacking-fb70e29de60f" target="_blank">Introduction to Game Hacking!</a> muffin <br><br>
+              <a href="https://infosecwriteups.com/idor-add-or-remove-the-linked-publications-from-author-publisher-settings-facebook-bug-bounty-2e5f8355aa01" target="_blank">[IDOR] add or remove the linked publications from Author Publisher settings — Facebook Bug Bounty</a> : Rahul Kankrale <br><br>
+              <a href="https://medium.com/@myutmdrive/from-git-directory-to-aws-ec2-network-takeover-5c0f9df1411c" target="_blank">From .git directory to AWS EC2 network takeover</a> : Abdullah AlSolaiman <br><br>
+              <a href="https://medium.com/@varmaanu001/html-injection-via-user-agent-leads-to-website-distortion-revealing-backend-code-304fee8f211c" target="_blank">HTML Injection via user agent leads to website distortion revealing backend code.</a> : Anurag__Verma <br><br>
+              <a href="https://shahjerry33.medium.com/sql-injection-the-file-upload-playground-6580b089d013" target="_blank">SQL Injection - The File Upload Playground</a> Jerry Shah (Jerry) <br><br>
+              <a href="https://mrvoidcg.medium.com/sql-injection-ab694404180b" target="_blank">SQL INJECTION</a> : Mr Void <br><br>
+              <a href="https://codewithvamp.medium.com/bug-type-stored-cross-site-scripting-xss-and-html-injection-part-2-7e8f2aecea80" target="_blank">Bug type: Stored Cross Site Scripting (XSS) and HTML Injection — Part 2</a> : Vaibhav Kumar Srivastava <br><br>
+              <a href="https://bhansalipratish.medium.com/2fa-bypass-methodologies-25504dda13dd" target="_blank">2FA Bypass Methodologies</a> : Pratish Bhansali <br><br>
+              <a href="https://infosecwriteups.com/how-i-scored-1k-bounty-using-waybackurls-717d9673ca52" target="_blank">How I Scored 1K Bounty Using Waybackurls</a> : Sicksec <br><br>
+              <a href="https://medium.com/@tameemkhalid786/playing-with-password-reset-function-9346bcd8e125" target="_blank">Playing With Password Reset Function</a> : Tameem khalid <br><br>
+              <a href="https://ashkan-ebtekari.medium.com/by-pass-two-factor-authentication-7c9ba9c27797" target="_blank">By Pass Two-Factor-Authentication</a> : Ashkan Ebtekari <br><br>
             </p>
           <br><br>
         </p>
