--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -237,7 +237,7 @@
               Reverse Engineering <br><br>
               <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Gaara</a> : Offensive Security Proving Grounds (Play) <br><br>
               <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
-              <a href="https://tryhackme.com/room/theblobblog" target="_blank">Sustah</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/sustah" target="_blank">Sustah</a> : TryHackMe <br><br>
               <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
               Security+ <br><br>
             </p>
@@ -259,6 +259,36 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 9: Jan 9 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/ethical-hacking-python/" target="_blank">The Complete Python Hacking Course: Beginner to Advanced!</a> : Udemy <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Monitoring</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/safezone" target="_blank">SafeZone</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              Security+ <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/research-on-host-header-injection-cyber-sapiens-internship-task-11-af65b3403ba9" target="_blank">Research on Host Header Injection — Cyber Sapiens Internship Task-11</a> : Prajit Sindhkar <br><br>
+              <a href="https://vikaran101.medium.com/how-i-hacked-into-one-of-indias-costliest-schools-b67c233b940e" target="_blank">How I hacked into one of India’s costliest schools!</a> : Vikaran <br><br>
+              <a href="https://medium.com/@mamunwhh/email-verification-bypass-a78d29582095" target="_blank">Email Verification Bypass</a> : khan mamun <br><br>
+              <a href="https://medium.com/techiepedia/nuclei-the-best-tool-for-automating-vulnerability-testing-4bf2a9ba5189" target="_blank">Nuclei — The best tool for automating Vulnerability testing.</a> : Nitin yadav <br><br>
+              <a href="https://aravind07.medium.com/i-can-change-your-profile-pic-on-target-com-without-your-knowledge-d6a85c6a8d64" target="_blank">I can change your profile pic on target.com without your knowledge</a> : Gnana Aravind <br><br>
+              <a href="https://medium.com/@rohitkarande852/no-rate-limiting-on-forgot-password-dac862e1d338" target="_blank">No Rate Limiting on Forgot Password</a> : Rohit Karande <br><br>
+              <a href="https://trysec.medium.com/hacking-milburg-highschool-96737996e2cd" target="_blank">HACKING Milburg Highschool</a> : Neelesh Patel <br><br>
+              <a href="https://medium.com/@imnitindubey/otp-verification-bypass-1e1c85343dfe" target="_blank">OTP Verification Bypass</a> : Nitin dubey <br><br>
+              <a href="https://medium.com/@Aaruthra/bug-allowed-users-to-enroll-course-for-free-1412d620a101" target="_blank">Bug Allowed users to enroll course for free</a> : KumaraGurubaran <br><br>
+              <a href="https://wahaz.medium.com/unauthenticated-sensitive-information-disclosure-at-redacted-2702224098c" target="_blank">Unauthenticated Sensitive Information Disclosure at [REDACTED]</a> : Rizaldi Wahaz <br><br>
+              <a href="https://medium.com/@daniel.j.hunt/introduction-to-bash-for-system-administration-and-bug-bounty-hunting-6003e16dc87a" target="_blank">Introduction To Bash For System Administration and Bug Bounty Hunting</a> : Daniel Hunt <br><br>
+
+            </p>
+          <br><br>
+        </p>
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
