--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -285,7 +285,32 @@
               <a href="https://medium.com/@Aaruthra/bug-allowed-users-to-enroll-course-for-free-1412d620a101" target="_blank">Bug Allowed users to enroll course for free</a> : KumaraGurubaran <br><br>
               <a href="https://wahaz.medium.com/unauthenticated-sensitive-information-disclosure-at-redacted-2702224098c" target="_blank">Unauthenticated Sensitive Information Disclosure at [REDACTED]</a> : Rizaldi Wahaz <br><br>
               <a href="https://medium.com/@daniel.j.hunt/introduction-to-bash-for-system-administration-and-bug-bounty-hunting-6003e16dc87a" target="_blank">Introduction To Bash For System Administration and Bug Bounty Hunting</a> : Daniel Hunt <br><br>
-
+            </p>
+          <br><br>
+        </p>
+        <br><br>
+        <h3>Day 10: Jan 10 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.udemy.com/course/ethical-hacking-python/" target="_blank">The Complete Python Hacking Course: Beginner to Advanced!</a> : Udemy <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Seppuku</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/safezone" target="_blank">SafeZone</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              Security+ <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://infosecwriteups.com/authorization-bypass-gmail-2949af041fb" target="_blank">Authorization bypass — Gmail</a> : 7𝖍3𝖍4𝖈kv157 <br><br>
+              <a href="https://sapt.medium.com/research-on-html-injection-cyber-sapiens-internship-task-9-9c220746d981" target="_blank">Research on HTML Injection- Cyber Sapiens Internship Task-9</a> : Prajit Sindhkar <br><br>
+              <a href="https://nishithp.medium.com/hacking-microsoft-forms-d05e22fb70d7" target="_blank">Hacking Microsoft Forms</a> : Nishith P <br><br>
+              <a href="https://as745591.medium.com/albussecurity-penetration-list-01-information-disclosure-part-1-4ab54d62f29d" target="_blank">AlbusSecurity:- Penetration-list 01 Information Disclosure — Part 1</a> : Albus Security <br><br>
+              <a href="https://medium.com/@sudarshan-s/idor-a-beginners-guide-bd5f9bf893fe" target="_blank">IDOR: A BEGINNER’S GUIDE</a> : Sudarshan Sangameswaran <br><br>
+              <a href="https://medium.com/@sudarshan-s/sap-my-first-cybersecurity-virutal-internship-experience-136431a8062f" target="_blank">SAP: MY FIRST CYBERSECURITY VIRUTAL INTERNSHIP EXPERIENCE</a> : Sudarshan Sangameswaran <br><br>
+              <a href="https://medium.com/@sudarshan-s/introduction-to-ip-addresses-for-beginners-2785dd685229" target="_blank">Introduction to IP Addresses for beginners</a> : Sudarshan Sangameswaran <br><br>
             </p>
           <br><br>
         </p>
