--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -315,6 +315,31 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 11: Jan 11 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Photographer</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/ctfonepiece65" target="_blank">One Piece</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+              Security+ <br><br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/research-on-xml-external-entity-injection-xxe-cyber-sapiens-internship-task-10-d6067d3dc934" target="_blank">Research on XML eXternal Entity Injection (XXE)-Cyber Sapiens Internship Task-10</a> : Prajit Sindhkar
+              <a href="https://systemweakness.com/the-story-of-how-i-bypass-mac-filter-fb7940feafd6" target="_blank">The Story Of How I Bypass MAC Filter</a> : zer0d <br><br>
+              <a href="https://popalltheshells.medium.com/my-cve-that-was-never-published-b04adf68017c" target="_blank">My CVE that will never be — [0day write-up]</a> : Ignatius Michael <br><br>
+              <a href="https://gokul4831.medium.com/insecure-deserialization-26dcb8660c0a" target="_blank">Insecure deserialization</a> : gokul GV <br><br>
+              <a href="https://m7-arman.medium.com/host-header-injection-lead-to-account-takeover-2f025a645d13" target="_blank">Host Header Injection Lead To Account Takeover</a> : M7.Arman <br><br>
+              <a href="https://gowtham-naidu.medium.com/p1-vulnerability-how-i-chained-logical-error-to-account-takeover-vulnerability-that-no-one-59aa88a9cae8" target="_blank">P1 Vulnerability: How I chained Logical-Error to Account-Takeover Vulnerability 😈🧑‍💻that No-One said you before😁</a> : Gowtham_Naidu <br><br>
+              <a href="https://manasharsh.medium.com/the-implementation-plan-for-hacking-what-not-to-do-and-where-f3d635288412" target="_blank">The Implementation plan for hacking: What not to do and where</a> : Manas Harsh <br><br>
+              <a href="https://infosecwriteups.com/nailing-automation-with-bash-core-concepts-and-implementations-95a05a613a44" target="_blank">Nailing automation with Bash: Core concepts and implementations</a> : Manas Harsh <br><br>
+            </p>
+          <br><br>
+        </p>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
