--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -340,6 +340,32 @@
             </p>
           <br><br>
         </p>
+        <br><br>
+        <h3>Day 12: Jan 12 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              Reverse Engineering <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">SunsetDecoy</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/jrpenetrationtester/join" target="_blank">JR Penetration Tester Path</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/reverseengineering" target="_blank">Reverse Engineering</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://infosecwriteups.com/inctf-pro-finals-2021-look-deeper-writeup-8f2333576f48" target="_blank">InCTF pro finals 2021: Look deeper writeup</a> : Yuvarajan <br><br>
+              <a href="https://infosecwriteups.com/a-tale-of-5250-how-i-accessed-millions-of-users-data-including-their-national-id-s-fd48ca7ca0bf" target="_blank">A TALE OF 5250$: HOW I ACCESSED MILLIONS OF USER’S DATA INCLUDING THEIR ADDRESS AND PERSONAL INFO</a> Sam <br><br>
+              <a href="https://sudarshan-s.medium.com/cookies-an-eye-opening-guide-1fbfdf76cb6b" target="_blank">COOKIES: AN EYE-OPENING GUIDE</a> : Sudarshan Sangameswaran <br><br>
+              <a href="https://medium.com/@86karthikkarthik/authentication-bypass-ato-ebdc5da62c46" target="_blank">Authentication Bypass & ATO</a> : Karthik <br><br>
+              <a href="https://systemweakness.com/how-to-hack-any-website-c08daec978f6" target="_blank">How To Hack Any Website</a> : Niveet Palan <br><br>
+              <a href="https://a-rshukla.medium.com/admin-login-bypass-in-a-coaching-system-adc8a18ea197" target="_blank">Admin Login Bypass in a Coaching system</a> : A.R shukla <br><br>
+              <a href="https://sa1tama0.medium.com/cross-origin-resource-sharing-cors-misconfiguration-leads-to-users-pii-leaks-b31fd3246e64" target="_blank">Cross-Origin Resource Sharing (CORS) Misconfiguration leads to User’s PII leaks.</a> : Tarikul Islam <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
