--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -366,6 +366,30 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 13: Jan 13 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://gist.github.com/muff-in/ff678b1fda17e6188aa0462a99626121#assembly-language" target="_blank">Low-Level Hacking</a> : muff-in <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBoxRookie</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
+              <a href="https://overthewire.org/wargames/" target="_blank">OverTheWire: Wargames</a>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://cyberguy0xd1.medium.com/my-write-up-in-hacking-ibms-administration-panel-and-getting-sqli-on-it-51404c7bee27" target="_blank">My write-up in hacking IBM’s administration panel and getting SQLi on it</a> : Momen Ali (Cyber Guy) <br><br>
+              <a href="https://medium.com/geekculture/params-discovering-hidden-treasure-in-webapps-b4a78509290f" target="_blank">Params — Discovering Hidden Treasure in WebApps</a> : Kathan Patel <br><br>
+              <a href="https://0xjoyghosh.medium.com/finding-and-exploiting-path-traversal-in-apache-2-4-49-http-server-cve-2021-41773-2ebb02d55ce2" target="_blank">Finding and Exploiting Path traversal in apache 2.4.49 http server [CVE-2021–41773]</a> : Joy Ghosh <br><br>
+              <a href="https://naufalardhani.medium.com/weak-password-authentication-lead-to-account-takeover-44464819cebe" target="_blank">IDOR on Password Change Leads to Mass Account Takeover</a> : Naufal Ardhani <br><br>
+              <a href="https://medium.com/@blackstorm.hacker777/get-your-own-hacking-vps-for-free-in-2022-89f5cc678758" target="_blank">Get your own Hacking VPS for free in 2022!!</a> : Blackstorm Hacker <br><br>
+              <a href="https://ronirza.medium.com/account-takeover-with-the-ability-to-bypass-email-verification-76a1f350897b" target="_blank">Account Takeover with the Ability to Bypass Email Verification</a> : RtwoGatelie <br><br>
+              <a href="https://medium.com/@vedantshinde153/hacking-the-dutch-government-733e772982c4" target="_blank">Hacking the Dutch Government</a> : Vedant Shinde <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
