--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -390,6 +390,30 @@
           <br><br>
         </p>
         <br><br>
+        <h3>Day 14: Jan 14 2022</h3><br>
+        <p>
+          <h5>My Activities</h5>
+            <p>
+              <a href="https://gist.github.com/muff-in/ff678b1fda17e6188aa0462a99626121#assembly-language" target="_blank">Low-Level Hacking</a> : muff-in <br><br>
+              <a href="https://www.linkedin.com/learning/comptia-security-plus-sy0-601-cert-prep-1-threats-attacks-and-vulnerabilities" target="_blank">Security+ (SY0-601)</a> : Linkedln Learning <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Vegeta1</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">CyberSploit1</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://tryhackme.com/path-action/pentestplus/join" target="_blank">CompTIA Pentest+ Path</a> : TryHackMe <br><br>
+              <a href="https://metactf.com/login" target="_blank">MetaCTF</a>
+              <a href="https://tryhackme.com/room/pythonforcybersecurity" target="_blank">Python for Pentesters</a> : TryHackMe <br></br>
+            </p>
+          <br><br> 
+          <h5>Blogs Reads</h5>
+            <p>
+              <a href="https://pullakarthik5.medium.com/stored-xss-8a17b088bb9a" target="_blank">STORED XSS</a> : @pullakarthik <br><br>
+              <a href="https://medium.com/@Sm9l/bug-bounty-fingerprinting-204506945ab" target="_blank">Bug Bounty Recon: Fingerprinting</a> : Sm9l <br><br>
+              <a href="https://medium.com/@mridulkakkar151/hunting-for-bugs-b5c9db6871fa" target="_blank">Hunting for Bugs</a> : Mridulkakkar <br><br>
+              <a href="https://infosecwriteups.com/bypassed-and-uploaded-a-sweet-reverse-shell-d15e1bbf5836" target="_blank">Bypassed! and uploaded a sweet reverse shell</a> : Ajay Sharma <br><br>
+              <a href="https://shahjerry33.medium.com/xss-via-exif-data-the-p2-elevator-d09e7b7fe9b9" target="_blank">XSS via Exif Data - The P2 Elevator</a> : Jerry Shah (Jerry) <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
